# turing-machine-py

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt  scripts.py  setup.py
.github/: dependabot.yml
src/turing_machine_py/: __init__.py  models.py  turing_machine_py.py
tests/: test_copy_string_program.py  test_sanity.py  test_version.py
